--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hottakes-frontend",
+  "name": "hot-takes",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "index.html",
   "scripts": {
     "start": "run-script-os",
     "start:linux:darwin": "concurrently \"node ./node_modules/.bin/http-server -a localhost -p 8081\"  \"sleep 1 && open http://localhost:8081\"",
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/cli": "^7.0.2",
-    "concurrently": "^6.3.0",
-    "http-server": "^14.0.0",
+    "concurrently": "^5.2.0",
+    "http-server": "^0.11.1",
+    "live-server": "^1.2.1",
     "run-script-os": "^1.1.6"
   }
 }
